--- a/Module 1/Ex10/Ex10.html
+++ b/Module 1/Ex10/Ex10.html
@@ -5,25 +5,14 @@
     <title>Module 1</title>
 </head>
 <body>
-<h1>Exercise 10</h1>
-<p id = "probability"></p>
-<script>
-  'use strict';
-  let dice, estimate, result, probability;
-  let roll = 0
-  let sum = 0
-  dice = parseInt(prompt("Enter number of dice rolls: "));
-  estimate = parseInt(prompt("Estimate sum of eye number: "));
-  for (let i = 1; i < 10000; i++) {
-      while (roll < dice) {
-      roll ++;
-      result = Math.floor(Math.random()*6)+1;
-      sum += result;
-    }
-  }
+  <h1>Exercise 10: Dice Probability Calculator</h1>
+  <label for="numDice">Number of Dice:</label>
+  <input type="number" id="numDice" min="1"><br><br>
+  <label for="sumOfEyes">Sum of Eye Numbers:</label>
+  <input type="number" id="sumOfEyes" min="1"><br><br>
+  <button onclick="calculateProbability()">Calculate Probability</button><br><br>
+  <p id="result"></p>
 
-  document.querySelector('#result').innerHTML = "The die rolls " + time + " times, and sum of results is " + sum + ".";
-</script>
-
+  <script src="Ex10.js"></script>
 </body>
 </html>
