--- a/Module 3/t1/1.html
+++ b/Module 3/t1/1.html
@@ -12,7 +12,11 @@
 
 <body>
     <h1>Task 1</h1>
-    <ul id="target"></ul>
+    <ul id="target">
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+    </ul>
 </body>
 
 </html>
